--- a/css.css
+++ b/css.css
@@ -10,7 +10,7 @@ p{
     height: 100%;
     width: 100%;
     flex-direction:column;
-    background-image: url(fondo.jpg);      
+    background-image: url(images/fondo.jpg);      
 }
 .TeCositos{
     max-width: 300px;
