--- a/css.css
+++ b/css.css
@@ -1,5 +1,5 @@
 body{
-    margin-: 0 8px auto 8px;
+    margin: 0;
     background-image: url(images/fondo.jpg); 
 }
 
@@ -9,55 +9,57 @@ body{
     height: 100%;
     width: 100%;
     flex-direction:column;
-         
-}
+} 
+
+.ohana{
+    display: flex;
+    flex-direction:row;  
+} 
+
+.reverse{
+    flex-direction: row-reverse;
+} 
+
 .TeCositos{
     max-width: 300px;
     min-width: 100px;
     padding: 0px 10px 0px 20px;
     margin: 30px 10px 10px 5px;
     border: 3px solid #444;
-
 }
 
 .Clau{
     margin-right: 60%;
     background-color: aquamarine;
-    border-radius: 0px 20px 20px 20px;
-    
+    border-radius: 0px 20px 20px 20px;   
 }
+
 .Michel{
     margin-left: 60%;
     text-align: end;
     background-color:cornflowerblue;
-    border-radius: 20px 0px 20px 20px;
-}
-.perfil {min-width: 50px;
-        min-height: 50px;
-        max-width: 150px;
-        max-height: 150px;
-        width: 100%;
-        height: max-content;
-        object-fit: cover;
-        border-radius: 100%;
-        margin-bottom: 10px;
-    }
-
-.ohana{
-    display: flex;
-    flex-direction: row;
+    border-radius: 20px 0px 20px 20px;   
 }
 
-.reverse{
-    flex-direction: row-reverse;
+.perfil{
+    min-width: 50px;
+    min-height: 50px;
+    max-width: 150px;
+    max-height: 150px;
+    width: 100%;
+    height: max-content;
+    object-fit: cover;
+    border-radius: 100%;
+    margin: 10px 10px 0 10px;
 }
+
 h1{
     color:aliceblue;
     text-align: center;
 }
+
 p{
     font-family: "Kanit", sans-serif;
     font-weight: 400;
-    font-style: italic;
     font-size: 1.1rem;
 }
