--- a/css.css
+++ b/css.css
@@ -26,6 +26,7 @@ body{
     padding: 0px 10px 0px 20px;
     margin: 30px 10px 10px 5px;
     border: 3px solid #444;
+    margin-top: 9%;
 }
 
 .Clau{
@@ -50,7 +51,13 @@ body{
     height: max-content;
     object-fit: cover;
     border-radius: 100%;
-    margin: 10px 10px 0 10px;
+    
+}
+.clau{
+    margin: 10px 0px 20px 10px;
+}
+.michel{
+    margin: 10px 10px 20px 0px;
 }
 
 h1{
