--- a/css.css
+++ b/css.css
@@ -21,8 +21,8 @@ body{
 } 
 
 .TeCositos{
-    max-width: 300px;
-    min-width: 100px;
+   
+ 
     padding: 0px 10px 0px 20px;
     margin: 30px 10px 10px 5px;
     border: 3px solid #444;
@@ -30,14 +30,13 @@ body{
 }
 
 .Clau{
-    margin-right: 60%;
+    margin-right: 10%;
     background-color: aquamarine;
     border-radius: 0px 20px 20px 20px;   
 }
 
 .Michel{
-    margin-left: 60%;
-    text-align: end;
+    margin-left: 10%;
     background-color:cornflowerblue;
     border-radius: 20px 0px 20px 20px;   
 }
@@ -69,4 +68,17 @@ p{
     font-family: "Kanit", sans-serif;
     font-weight: 400;
     font-size: 1.1rem;
+}
+
+@media (min-width:320px) and (max-width:425px) {
+    img.perfil{
+        max-width: 50px;
+        max-height: 50px;
+    } 
+}
+@media (min-width:768px) and (max-width:1024px) {
+    img.perfil{
+        max-width: 100px;
+        max-height: 100px;
+    } 
 }
