--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,10 +21,12 @@ section.center-wrap{
 }
 #ad-banner {
     position:relative;    
-    cursor: pointer;     
+    cursor: pointer;
+    z-index:2;
 }
 #sin-banner{
     background-color:aqua !important;
+    z-index:1;
 }
 a{  text-decoration: none;
     font-size: 1.5em;
